src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Donation</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Pledged</fullName>
        </values>
        <values>
            <fullName>Posted</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Withdrawn</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Grant</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Application Submitted</fullName>
        </values>
        <values>
            <fullName>Awarded</fullName>
        </values>
        <values>
            <fullName>LOI Submitted</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Withdrawn</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>In-Kind Gift</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cultivating</fullName>
        </values>
        <values>
            <fullName>In-Kind Not Yet Received</fullName>
        </values>
        <values>
            <fullName>In-Kind Received</fullName>
        </values>
        <values>
            <fullName>Withdrawn</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Major Gift</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awarded</fullName>
        </values>
        <values>
            <fullName>Cultivation</fullName>
        </values>
        <values>
            <fullName>Declined</fullName>
        </values>
        <values>
            <fullName>Identification</fullName>
        </values>
        <values>
            <fullName>Posted</fullName>
        </values>
        <values>
            <fullName>Proposal%2FReview</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Solicitation</fullName>
        </values>
        <values>
            <fullName>Verbal Commitment</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>npe01__Amount_Outstanding__c</fullName>
        <description>Formula: The Amount of this Opportunity minus the Payment Writeoff Amount and Payment Amount Received.</description>
        <formula>Amount - NULLVALUE(npe01__Payments_Made__c, 0) - NULLVALUE(npe01__Amount_Written_Off__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: The Amount of this Opportunity minus the Payment Writeoff Amount and Payment Amount Received.</inlineHelpText>
        <label>Remaining Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npe01__Amount_Written_Off__c</fullName>
        <description>Total value of the Payments marked as written-off or noncollectable for this Opportunity.</description>
        <inlineHelpText>Total value of the Payments marked as written-off or noncollectable for this Opportunity.</inlineHelpText>
        <label>Payment Writeoff Amount</label>
        <summarizedField>npe01__OppPayment__c.npe01__Payment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>npe01__OppPayment__c.npe01__Written_Off__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>npe01__OppPayment__c.npe01__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>npe01__Contact_Id_for_Role__c</fullName>
        <description>System field updated automatically.  Do not use.</description>
        <inlineHelpText>Hidden field for passing a Contact Id for Contact Role creation.</inlineHelpText>
        <label>Contact Id for Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Do_Not_Automatically_Create_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If payments are active, and if this is checked, a new payment will not be automatically created for this Opportunity.</description>
        <inlineHelpText>If payments are active, and if checked, a new payment will not be automatically created for this Opportunity.</inlineHelpText>
        <label>Do Not Automatically Create Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__Is_Opp_From_Individual__c</fullName>
        <description>Formula: Whether or not the related Account is defined as an individual (SYSTEMIsIndividual__c)</description>
        <formula>IF( Account.npe01__SYSTEMIsIndividual__c, &apos;true&apos;, &apos;false&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Whether or not the related Account is defined as an individual (SYSTEMIsIndividual__c)</inlineHelpText>
        <label>Is Opp From Individual</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Member_Level__c</fullName>
        <description>Used for Membership Opportunities (Record Type)</description>
        <inlineHelpText>Determines the value on the Contact or Account of the Last Membership Level field.</inlineHelpText>
        <label>Member Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__Membership_End_Date__c</fullName>
        <description>Used for Membership Opportunities (Record Type)</description>
        <inlineHelpText>Date membership period ends.</inlineHelpText>
        <label>Membership End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe01__Membership_Origin__c</fullName>
        <description>Used for Membership Opportunities (Record Type)</description>
        <inlineHelpText>Is this a renewal, a new membership, or a membership with someone who lapsed and has returned.</inlineHelpText>
        <label>Membership Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Reacquire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__Membership_Start_Date__c</fullName>
        <description>Used for Membership Opportunities (Record Type)</description>
        <inlineHelpText>Date when membership period starts</inlineHelpText>
        <label>Membership Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe01__Number_of_Payments__c</fullName>
        <description>Calculated based on the Payment object.</description>
        <inlineHelpText>Total number of payments for this Opportunity (Donation)</inlineHelpText>
        <label>Number of Payments</label>
        <summaryForeignKey>npe01__OppPayment__c.npe01__Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>npe01__Payments_Made__c</fullName>
        <description>The total value of Payments marked as paid for this Opportunity.</description>
        <inlineHelpText>The total value of Payments marked as paid for this Opportunity.</inlineHelpText>
        <label>Payment Amount Received</label>
        <summarizedField>npe01__OppPayment__c.npe01__Payment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>npe01__OppPayment__c.npe01__Paid__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>npe01__OppPayment__c.npe01__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>npe03__Recurring_Donation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recurring Donation</label>
        <referenceTo>npe03__Recurring_Donation__c</referenceTo>
        <relationshipLabel>Donations</relationshipLabel>
        <relationshipName>Donations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npo02__CombinedRollupFieldset__c</fullName>
        <description>Hidden system field, do not add to layouts.</description>
        <formula>TEXT(CloseDate) + &apos;;|;&apos;+ TEXT(Amount) + &apos;;|;&apos;+ TEXT(npe01__Member_Level__c) + &apos;;|;&apos;+ TEXT(npe01__Membership_Origin__c) + &apos;;|;&apos; +  Id</formula>
        <inlineHelpText>Concatenated fields used during rollups to locate the most recent opportunity.</inlineHelpText>
        <label>Combined Rollup Fieldset</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__systemHouseholdContactRoleProcessor__c</fullName>
        <description>Hidden system field.  Do not update, updated by automatic process.</description>
        <inlineHelpText>Controls if Household contact roles are created for Opportunities.  DEPRECATED.  Replaced by custom settings.</inlineHelpText>
        <label>_SYSTEM: HOUSEHOLD CONTACT ROLEPROCESSOR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Opportunities</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>No Opportunities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Acknowledgment_Date__c</fullName>
        <description>The date that you acknowledged this Opportunity.</description>
        <inlineHelpText>Date of acknowledgment</inlineHelpText>
        <label>Acknowledgment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Acknowledgment_Status__c</fullName>
        <description>The acknowledgement status of this Opportunity. </description>
        <inlineHelpText>Status of Acknowledgment of this gift.</inlineHelpText>
        <label>Acknowledgment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>To Be Acknowledged</fullName>
                </value>
                <value>
                    <fullName>Acknowledged</fullName>
                </value>
                <value>
                    <fullName>Do Not Acknowledge</fullName>
                </value>
                <value>
                    <fullName>Email Acknowledgment Now</fullName>
                </value>
                <value>
                    <fullName>Email Acknowledgment Not Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Ask_Date__c</fullName>
        <description>The date the donor was asked for this Donation. This may be different from the date you received it.</description>
        <inlineHelpText>The date when the donor was specifically asked for the donation, as opposed to the Opportunity Close Date that the organization may set to either when the Opportunity was first created, or when the Opportunity was won.</inlineHelpText>
        <label>Ask Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch</label>
        <referenceTo>npsp__Batch__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Closed_Lost_Reason__c</fullName>
        <description>Notes on why the donation ask was not successful.</description>
        <inlineHelpText>Notes on why the donation ask was not successful.</inlineHelpText>
        <label>Closed Lost Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>npsp__Fair_Market_Value__c</fullName>
        <description>The Fair Market Value of an In-Kind gift.</description>
        <inlineHelpText>The Fair Market Value of an In-Kind gift.</inlineHelpText>
        <label>Fair Market Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Gift_Strategy__c</fullName>
        <description>Categorizes the type of ask for this Opportunity, for example, New Donor.</description>
        <inlineHelpText>Categorizes the type of ask for this opportunity.</inlineHelpText>
        <label>Gift Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Donor</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Grant_Contract_Date__c</fullName>
        <description>The date of the Grant&apos;s inception, according to the document or contract sent by the grantmaking organization.</description>
        <inlineHelpText>The date of the grant&apos;s inception, according to the document or contract sent by the grant-making organization.</inlineHelpText>
        <label>Grant Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Grant_Contract_Number__c</fullName>
        <description>Use this to track unique numbers sometimes assigned by grantmaking organizations.</description>
        <inlineHelpText>Tracks unique numbers sometimes assigned by grant-making organizations.</inlineHelpText>
        <label>Grant Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Grant_Period_End_Date__c</fullName>
        <description>The date on which the period of the grant ends.</description>
        <label>Grant Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Grant_Period_Start_Date__c</fullName>
        <description>The date on which the period of the grant begins.</description>
        <label>Grant Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Grant_Program_Area_s__c</fullName>
        <description>Use this to describe the funding areas for the Grant or Donation. For example, the names of the programs the Grant or Donation is designated for.</description>
        <inlineHelpText>Describes the funding areas for the grant. You can enter anything you want here. For example, you could enter the name of the program the grant applies to.</inlineHelpText>
        <label>Program Areas</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>npsp__Grant_Requirements_Website__c</fullName>
        <description>A URL that points to the grant requirements on the grantmaker&apos;s website.</description>
        <inlineHelpText>A URL that points to the grant requirements on the grant-maker&apos;s website.</inlineHelpText>
        <label>Grant Requirements Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>npsp__Honoree_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Contact record of the honoree for this Donation.</description>
        <inlineHelpText>The existing Contact record of the honoree for this donation.</inlineHelpText>
        <label>Honoree Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Honoree Contact)</relationshipLabel>
        <relationshipName>Honoree_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Honoree_Name__c</fullName>
        <description>The honoree name as provided by the donor. If this field is left blank, and the Honoree Contact field contains a value, NPSP automatically populates this field with that value.</description>
        <inlineHelpText>The honoree name as provided by the donor. If this field is left blank, and the Honoree Contact field contains a value, Salesforce automatically populates this field with that value.</inlineHelpText>
        <label>Honoree Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__In_Kind_Description__c</fullName>
        <description>Holds any rich text description of the In-Kind Gift, including pictures.</description>
        <inlineHelpText>Holds any rich text description of the In-Kind Gift, including pictures.</inlineHelpText>
        <label>In-Kind Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>npsp__In_Kind_Donor_Declared_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the donor provided the Fair Market Value for this In-Kind Gift.</description>
        <inlineHelpText>Checked if the donor provided the Fair Market Value for this In-Kind gift.</inlineHelpText>
        <label>In-Kind Donor Declared Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__In_Kind_Type__c</fullName>
        <description>The type of In-Kind Gift, for example, Goods or Services.</description>
        <inlineHelpText>The type of In-Kind gift.</inlineHelpText>
        <label>In-Kind Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Goods</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Is_Grant_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Grant is a renewal of a previous Grant.</description>
        <inlineHelpText>If selected, indicates that the grant is a renewal of a previous grant.</inlineHelpText>
        <label>Is Grant Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Matching_Gift_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Account record of the company that will match this Donation.</description>
        <label>Matching Gift Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Matched Gifts</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Matching_Gift_Employer__c</fullName>
        <description>The name of the company that will match this Donation.</description>
        <label>Matching Gift Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Matching_Gift_Status__c</fullName>
        <description>The status of the Matching Gift for this Donation, for example, Submitted or Received.</description>
        <label>Matching Gift Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Potential</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Matching_Gift__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Opportunity record for the Matching Gift for this Donation.</description>
        <label>Matching Gift</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Matched Gifts</relationshipLabel>
        <relationshipName>MatchedGifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Next_Grant_Deadline_Due_Date__c</fullName>
        <description>The due date for this Opportunity&apos;s next Deliverable (read only).</description>
        <inlineHelpText>The NPSP updates this field automatically based on the next Grant Deadline record.</inlineHelpText>
        <label>Next Deliverable Date</label>
        <summarizedField>npsp__Grant_Deadline__c.npsp__Grant_Deadline_Due_Date__c</summarizedField>
        <summaryFilterItems>
            <field>npsp__Grant_Deadline__c.npsp__Grant_Deadline_Due_Date__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>npsp__Grant_Deadline__c.npsp__Grant_Deliverable_Close_Date__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>npsp__Grant_Deadline__c.npsp__Opportunity__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>npsp__Notification_Message__c</fullName>
        <description>A personalized message for the notification recipient.</description>
        <inlineHelpText>A personalized message for the notification recipient.</inlineHelpText>
        <label>Notification Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>npsp__Notification_Preference__c</fullName>
        <description>Indicates how the notification recipient should be notified, for example, by email or phone.</description>
        <inlineHelpText>How the notification recipient should be notified.</inlineHelpText>
        <label>Notification Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Postal Mail</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Do Not Notify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Notification_Recipient_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Contact record of the person who should be notified about this Donation.</description>
        <inlineHelpText>The existing Contact record of the person to be notified for this donation.</inlineHelpText>
        <label>Notification Recipient Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Notification Recipient)</relationshipLabel>
        <relationshipName>Notification_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Notification_Recipient_Information__c</fullName>
        <description>Enter any contact information such as address, phone, or email that the donor provided for the notification recipient.</description>
        <inlineHelpText>The contact information (as provided by the donor) for the notification recipient.</inlineHelpText>
        <label>Notification Recipient Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>npsp__Notification_Recipient_Name__c</fullName>
        <description>The name that the donor provided of the person you should notify about this Donation. If this field is left blank and the Notification Recipient Contact field contains a value, NPSP automatically populates this field with that value.</description>
        <inlineHelpText>The name (as provided by the donor) of the person who should be notified about this gift. If this field is left blank and the Notification Recipient Contact field contains a value, Salesforce automatically populates this field with that value.</inlineHelpText>
        <label>Notification Recipient Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Previous_Grant_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this Grant is a renewal of a previous Grant, use this field to relate this record to the previous Grant.</description>
        <inlineHelpText>If this grant is a renewal of a previous grant, use this field to relate this record to the previous one.</inlineHelpText>
        <label>Previous Grant/Gift Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Related Grants/Gifts</relationshipLabel>
        <relationshipName>Previous_Grant_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Primary_Contact_Campaign_Member_Status__c</fullName>
        <description>The status NPSP uses when it creates a Campaign Member for this Opportunity&apos;s Primary Contact and Primary Campaign Source. Leave blank to default to a responded status for Closed/Won Opportunities, and a non-responded status for other Opportunities.</description>
        <inlineHelpText>The status to use when creating a campaign member for this opportunity&apos;s primary contact and primary campaign source. Leave blank to default to an responded status for closed/won opportunities, and a non-responded status for other opportunities.</inlineHelpText>
        <label>Primary Contact Campaign Member Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Primary Contact for this Opportunity. If this is an individual Donation, NPSP attributes the Donation to the Primary Contact. If this is an organizational Donation, NPSP attributes a soft credit to the Primary Contact.</description>
        <inlineHelpText>The primary contact for this opportunity. The primary contact role is kept in sync with this field. For individual donations, this denotes attribution for this opportunity.</inlineHelpText>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Qualified_Date__c</fullName>
        <description>The date your organization identified this donor as qualifying for this Donation.</description>
        <inlineHelpText>The date this donor was identified as qualifying for this donation.</inlineHelpText>
        <label>Qualified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Recurring_Donation_Installment_Name__c</fullName>
        <description>The installment name for inclusion in Opportunity naming. Shows the installment number in parentheses for open ended Recurring Donations, or the installment number out of the total for Recurring Donations with a set number of installments.</description>
        <formula>IF(
ISBLANK(npe03__Recurring_Donation__c),
&apos;&apos;,
  IF(
    OR(ISPICKVAL(npe03__Recurring_Donation__r.npe03__Open_Ended_Status__c, &apos;Open&apos;),ISPICKVAL(npe03__Recurring_Donation__r.npe03__Open_Ended_Status__c, &apos;Closed&apos;),ISBLANK(npe03__Recurring_Donation__r.npe03__Installments__c)),
    &apos;(&apos;&amp;TEXT(npsp__Recurring_Donation_Installment_Number__c)&amp;&apos;)&apos;,
    &apos;(&apos;&amp;TEXT(npsp__Recurring_Donation_Installment_Number__c)&amp;&apos; &apos;&amp;$Label.npsp__oppinstallmentsof&amp;&apos; &apos;&amp;TEXT(npe03__Recurring_Donation__r.npe03__Installments__c)&amp;&apos;)&apos;
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Installment name for inclusion in Opportunity Naming. Shows the installment number in parenthesis for open ended recurring donations, or the installment number out of the total for recurring donations with a set number of installments.</inlineHelpText>
        <label>Recurring Donation Installment Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Recurring_Donation_Installment_Number__c</fullName>
        <description>The installment number of this Opportunity&apos;s Recurring Donation schedule.</description>
        <inlineHelpText>The installment number of this opportunity&apos;s recurring donation schedule.</inlineHelpText>
        <label>Recurring Donation Installment Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Requested_Amount__c</fullName>
        <description>The amount you are requesting. This number might be different from the final award amount.</description>
        <inlineHelpText>The amount you are requesting. This number might be different from the final award amount.</inlineHelpText>
        <label>Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Tribute_Type__c</fullName>
        <description>Indicates whether the Donation is in honor or in memory of an individual.</description>
        <inlineHelpText>Indicates whether the gift is in honor or memory of an individual.</inlineHelpText>
        <label>Tribute Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Honor</fullName>
                </value>
                <value>
                    <fullName>Memorial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllDonations</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Donation</value>
        </filters>
        <label>All Donations</label>
    </listViews>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
</CustomObject>